# generic-upper-bound

./: Cargo.toml  README.md  build.rs
src/: implementation.rs  lib.rs
