[package]
name = "generic-upper-bound"
version = "3.0.1"
rust-version = "1.78"
edition = "2021"
license = "MIT"
description = "Stable workaround for internal uses of generic-const-exprs"
repository = "https://github.com/maxdexh/generic-upper-bound"
documentation = "https://docs.rs/generic-upper-bound"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["no_std", "const"]
authors = ["Max Dexheimer <maxdexh03@gmail.com>"]

[dependencies]
type-const = "1.0.0"
